pkgtemplatedir=/etc/CAENPLLConfig/templates/
datadir=/etc
bin_PROGRAMS=CAENPLLConfig
CAENPLLConfig_SOURCES=vme_wrapper.cpp V1724_board.cpp V1721_board.cpp V1720_board.cpp V1731_board.cpp V1740_board.cpp spinctld.cpp mainframe.cpp hyperlinkctrl.cpp infodialog.cpp generic_board.cpp config_doc.cpp common_defs.cpp appsettings.cpp caenpllconfig.cpp wxBackgroundBitmap.cpp
CAENPLLConfig_LDADD = -lCAENdigitizerSDK -lCAENVME
INCLUDES = -I./
pkgdata_DATA=settings.txt 
pkgtemplate_DATA=templates/V1720_template.txt templates/V1721_template.txt templates/V1724_template.txt templates/V1731_template.txt templates/V1740_template.txt
